Refactor recipe drop handling and introduce bench-based recipe registries
- Removed the RecipeDropModifier class as it is no longer needed.
- Updated UnobstructedThirdPersonPlugin to remove references to RecipeDropListener.
- Enhanced AssetTestHelper to support bench-based recipe registries.
- Modified BlockIdWithoutHasBlockTypeTest to utilize the new bench registry system.
- Updated BlockRecipeRegistryTest to test the new BenchRecipeRegistry functionality.
- Adjusted DropBehaviorScenarioTest to accommodate changes in recipe handling.
- Added integration tests for multi-ingredient recipes and their drop behavior.
- Refactored TestDataSet to include new furniture bed recipe and related items.